--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,10 @@
   <body>
 
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="mobile-warning">
+      <p>Este sitio está disponible sólo para desktop por el momento</p>
+      <p>This site is available only for desktop at this moment</p>
+    </div>
     <div id="root"></div>
     
   </body>
