add px on mobile warning

--- a/public/index.html
+++ b/public/index.html
@@ -22,8 +22,8 @@
 
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="mobile-warning">
-      <p>Este sitio está disponible sólo para desktop por el momento</p>
-      <p>This site is available only for desktop at this moment</p>
+      <p>Este sitio está disponible sólo para desktop (>1100px) por el momento</p>
+      <p>This site is available only for desktop (>1100px) at this moment</p>
     </div>
     <div id="root"></div>
     
